<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="MAIN" Id="{aae7410b-55c4-4d1b-8483-7c04414fd9ab}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	fb_SecPulse						: DFB_Second_Pulse;
	fbDel							: FB_Delay;
	fbDebugStationProcess			: FB_DebugStationProcess;
	fbDBStnUpdateStatus				: FB_DBStnUpdateStatus;
	fbTCMLevelEPTUpdate				: FB_TCMLevelEPTUpdate;
	fbGUI_TEST						: ARRAY [1..NO_OF_LEVEL] OF FB_GUI_TEST;
	fbGUI_TEST_SLTC					: ARRAY [1..NO_OF_LEVEL] OF FB_GUI_TEST_SLTC;
	fbUpdateStatus					: ARRAY [1..NO_OF_LEVEL] OF FB_UpdateStatus;
	fbTCShuttlePOC_Process			: ARRAY [1..NO_OF_LEVEL] OF FB_TCShuttlePOC_Process;
	fbTCMultiLevel_Process			: ARRAY [1..NO_OF_LEVEL] OF FB_TCMultiLevel_Process;
	fbTCLevel_Process				: ARRAY [1..NO_OF_LEVEL] OF FB_TCLevel_Process;
	
	bFbDelIn						: BOOL;	//Int for 20 Sec
	bFBDelOut						: BOOL;	//Int for 20 Sec
    bDebugging						: BOOL;	
	bDebug							: BOOL;
	bTemp							: BOOL;
	bForceFalse						: BOOL	:= FALSE;
	bErrorTemp						: BOOL;
	isDbStnTIIAlarm					: BOOL;
	DBColumnAlarmLED				: BOOL;
	
	isTIIAlarms						: ARRAY[1..NO_OF_LEVEL] OF BOOL;
	_TIIAlarmLED					: ARRAY[1..NO_OF_LEVEL] OF BOOL;
	_TIIAlarmEPT					: ARRAY[1..NO_OF_LEVEL] OF BOOL;
	bAlarmBlock						: ARRAY[1..NO_OF_LEVEL] OF BOOL;
	
	DbStnTIIAlarmLED				: BOOL;
	
	_iSubModToRset					: INT;	//Get From TA Command
	_iAlmIDToRset					: INT;	//Get From TA Command
	
	noOfLevel						: UINT	:= 1;
	iLevel							: UINT;
	
	iUnBlock						: ARRAY[1..NO_OF_LEVEL] OF DINT;
	
	DbStnDIFU						: R_TRIG;
	DIFU							: ARRAY[1..NO_OF_LEVEL] OF R_TRIG;
	UnblockTIIDIFU					: ARRAY[1..NO_OF_LEVEL] OF R_TRIG;
	
	DbStnDIFD						: F_TRIG;
	DIFD							: ARRAY[1..NO_OF_LEVEL] OF F_TRIG;
	UnblockTIIDIFD					: ARRAY[1..NO_OF_LEVEL] OF F_TRIG;
	
	stTCMainVIO						: ST_TCColumn_VIO;
	stTCShuttlePOC_VIO				: ST_TCShuttlePOC_VIO;
	stTCMLevelVIO					: ST_TCMultiLevel_VIO;
	stDbStnVIO						: ST_DebugStation_VIO;
	
	//fbCommandEventMonitor : FB_CommandEventMonitor;
	
	
	
	
	
	
	
	fbTCMain						: INT;
	
	TestDIFU						: R_TRIG;
	
	iTestIntIndex					: INT;
	varBool							: BOOL;


	
	stDbColVIO						: ST_DebugColumnVIO;
	
	fb_Testing						: Testing;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//////////////////////////////////// Diagnostic mode configuration mapping //////////////////////////////////////////////////////////
///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
stDbStnVIO 																	:= stDebugStation.fbDBStnSeq.P_stVIO;
stDbStnVIO.bDiagnosticMode													:= bDiagnosticMode;
stDebugStation.fbDBStnSeq.P_stVIO											:= stDbStnVIO;

stDbColVIO 																	:= fbDebugColumn.P_stVIO;
stDbColVIO.bDiagnosticMode 													:= bDiagnosticMode;
fbDebugColumn.P_stVIO														:= stDbColVIO;
	
///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
///////////////////////////////	Always call /////////////////////////////////////////////////////////////////////////////////////////////
///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
fb_SecPulse(TON1_TIME:= T#1S, QSec_P=> Sec_P);
PreInitialise();
ASSIGN_COLUMN();	// Get local Net ID to verify column ID

IF (NOT IsNetIDReadOK) AND bProductionMode THEN
	; //Reply Column Assignment Failed Event To TA
ELSE
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
/////////////////////////////// Debug Station /////////////////////////////////////////////////////////////////////////////////////////////
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
	IF bDebugStation THEN
		fbDBStnUpdateStatus(
			DBColumnAlarmLED			:= DBColumnAlarmLED
		);
		fbDebugColumn(
			DBColumnAlarmLED			=> DBColumnAlarmLED
		);	//Facility
		fbDebugStationProcess();	//Debug Station
		
		fbDbStnTIIAlarm(
			vIO																:= stDbStnVIO, 
			NoOfTIIAlm														:= NO_OF_TII_SENSOR, 
			iLevel															:= 1, (*stAlmMod:= ALMTC,*) 
			isTIIError														=> isDbStnTIIAlarm,
			TIIAlarmLED														=> DbStnTIIAlarmLED
		);
		
		IF stDbStnVIO.TIIAlarmLED <> DbStnTIIAlarmLED THEN
			stDbStnVIO.TIIAlarmLED											:= DbStnTIIAlarmLED;
			stDebugStation.fbDBStnSeq.P_stVIO								:= stDbStnVIO;
		END_IF
		
		DbStnDIFU(CLK:=isDbStnTIIAlarm);
		IF DbStnDIFU.Q THEN 
			stDbStnVIO														:= stGblDbStnVIO;
			stDbStnVIO.isTIIError											:= TRUE;	// To Ckeck the Bit In Process!
			stDebugStation.fbDBStnSeq.P_stVIO								:= stDbStnVIO;
		END_IF
		
		DbStnDIFD(CLK:=isDbStnTIIAlarm);
		IF DbStnDIFD.Q THEN 
			stDbStnVIO														:= stGblDbStnVIO;
			stDbStnVIO.isTIIError											:= FALSE;
			stDebugStation.fbDBStnSeq.P_stVIO								:= stDbStnVIO;
		END_IF
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
/////////////////////////////// TC & Full Cell Stack /////////////////////////////////////////////////////////////////////////////////////////////
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
	ELSE 
		fbSLTCExtra(); // Extra SLTC IO check;
		noOfLevel															:= SEL(bDebugCart, NO_OF_LEVEL, NO_OF_DC_CELL_LEVEL);
	
		FOR iLevel := 1 TO noOfLevel DO
			fbTCColumn(
				iLevel														:= iLevel);
				
			fbUpdateStatus[iLevel](
				iLevel														:= iLevel);
			
			fbTCColumn.M_UpdateSysAlarmFlag(
				iLevel														:= iLevel);
				
			fbTCMultiLevel_Process[iLevel](
				iLevel														:= iLevel);
				
			arrTCMultiLevelVIO[iLevel]										:= arrTCMultiLevel[iLevel].fbTCMultiLevelSeq.P_stTCMultiLevelVIO;
			
			fbTCMLevelEPTUpdate(
				iLevel														:= iLevel); //Update EPT State;
				
			stTCMLevelVIO													:= arrTCMultiLevelVIO[iLevel];
			bFbDelIn														:= stTCMLevelVIO.ipTesterPresent AND stTCMLevelVIO.ipTesterLatchesClosed;
			
			fbDel(
				msec														:= 20000,
				in															:= bFbDelIn,
				out															:= bFBDelOut);
			
			stTCMLevelVIO.bTstDelInt										:= bFBDelOut;
			arrTCMultiLevel[iLevel].fbTCMultiLevelSeq.P_stTCMultiLevelVIO	:= stTCMLevelVIO;
			
			// Update TIIAlarms
			arrTIIAlarm[iLevel](
				vIO																			:= arrTCMultiLevelVIO[iLevel],
				NoOfTIIAlm																	:= NO_OF_TII_SENSOR,
				iLevel																		:= iLevel, (*stAlmMod:= ALMTC,*)
				isTIIError																	=> isTIIAlarms[iLevel],
				iUnBlock																	=> iUnBlock[iLevel], 
				bAlarmBlock																	=> bAlarmBlock[iLevel],
				TIIAlarmLED																	=> _TIIAlarmLED[iLevel],
				TIIAlarmEPT																	=> _TIIAlarmEPT[iLevel]
			);
				
			stTCMLevelVIO 																:= arrTCMultiLevel[iLevel].fbTCMultiLevelSeq.P_stTCMultiLevelVIO;	
		
			IF stTCMLevelVIO.iUnBlock <> iUnBlock[iLevel] THEN
				stTCMLevelVIO.iUnBlock													:= iUnBlock[iLevel];
				arrTCMultiLevel[iLevel].fbTCMultiLevelSeq.P_stTCMultiLevelVIO			:= stTCMLevelVIO;
			END_IF
			
			IF stTCMLevelVIO.bAlarmBlock <> bAlarmBlock[iLevel] THEN
				stTCMLevelVIO.bAlarmBlock												:= bAlarmBlock[iLevel];
				arrTCMultiLevel[iLevel].fbTCMultiLevelSeq.P_stTCMultiLevelVIO			:= stTCMLevelVIO;
			END_IF
			
			IF stTCMLevelVIO.TIIAlarmEPT <> _TIIAlarmEPT[iLevel] THEN
				stTCMLevelVIO.TIIAlarmEPT												:= _TIIAlarmEPT[iLevel];
				arrTCMultiLevel[iLevel].fbTCMultiLevelSeq.P_stTCMultiLevelVIO			:= stTCMLevelVIO;
			END_IF
			
			IF stTCMLevelVIO.TIIAlarmLED <> _TIIAlarmLED[iLevel] THEN
				stTCMLevelVIO.TIIAlarmLED												:= _TIIAlarmLED[iLevel];
				arrTCMultiLevel[iLevel].fbTCMultiLevelSeq.P_stTCMultiLevelVIO			:= stTCMLevelVIO;
			END_IF
						
			DIFU[iLevel](CLK := isTIIAlarms[iLevel]);
			
			IF DIFU[iLevel].Q THEN 
				stTCMLevelVIO															:= arrTCMultiLevelVIO[iLevel];
				stTCMLevelVIO.isTIIError												:= TRUE; // To Ckeck the Bit In Process!
				//arrTCMultiLevelVIO[iLevel]:=stTCMLevelVIO;
				arrTCMultiLevel[iLevel].fbTCMultiLevelSeq.P_stTCMultiLevelVIO			:= stTCMLevelVIO;
			END_IF
			DIFD[iLevel](CLK := isTIIAlarms[iLevel]);
			IF DIFD[iLevel].Q THEN 
				stTCMLevelVIO															:= arrTCMultiLevelVIO[iLevel];
				stTCMLevelVIO.isTIIError												:= FALSE;
				//arrTCMultiLevelVIO[iLevel]:=stTCMLevelVIO;
				arrTCMultiLevel[iLevel].fbTCMultiLevelSeq.P_stTCMultiLevelVIO			:= stTCMLevelVIO;
			END_IF
			
			//Convert Int to Boolean 
			//EAP FROM TC => TBOT
			stTCMLevelVIO := arrTCMultiLevel[iLevel].fbTCMultiLevelSeq.P_stTCMultiLevelVIO;
			CASE iLevel OF
				1 :	
					stEAP.stTBOT_TC_EAP[iTCColumnID].iTCDrawerCylExtendRS_EAP.0		:= stTCMLevelVIO.ipTCDrawerCylExtendRS;
				2 :	
					stEAP.stTBOT_TC_EAP[iTCColumnID].iTCDrawerCylExtendRS_EAP.1		:= stTCMLevelVIO.ipTCDrawerCylExtendRS;
				3 :	
					stEAP.stTBOT_TC_EAP[iTCColumnID].iTCDrawerCylExtendRS_EAP.2		:= stTCMLevelVIO.ipTCDrawerCylExtendRS;
				4 :	
					stEAP.stTBOT_TC_EAP[iTCColumnID].iTCDrawerCylExtendRS_EAP.3		:= stTCMLevelVIO.ipTCDrawerCylExtendRS;
				5 :	
					stEAP.stTBOT_TC_EAP[iTCColumnID].iTCDrawerCylExtendRS_EAP.4		:= stTCMLevelVIO.ipTCDrawerCylExtendRS;
				6 :	
					stEAP.stTBOT_TC_EAP[iTCColumnID].iTCDrawerCylExtendRS_EAP.5		:= stTCMLevelVIO.ipTCDrawerCylExtendRS;
			END_CASE
				
			CASE iLevel OF
				1 :	
					stEAP.stTBOT_TC_EAP[iTCColumnID].iTCDrawerCylRetractRS_EAP.0	:= stTCMLevelVIO.ipTCDrawerCylRetractRS;
				2 :	
					stEAP.stTBOT_TC_EAP[iTCColumnID].iTCDrawerCylRetractRS_EAP.1	:= stTCMLevelVIO.ipTCDrawerCylRetractRS;
				3 :	
					stEAP.stTBOT_TC_EAP[iTCColumnID].iTCDrawerCylRetractRS_EAP.2	:= stTCMLevelVIO.ipTCDrawerCylRetractRS;
				4 :	
					stEAP.stTBOT_TC_EAP[iTCColumnID].iTCDrawerCylRetractRS_EAP.3	:= stTCMLevelVIO.ipTCDrawerCylRetractRS;
				5 :	
					stEAP.stTBOT_TC_EAP[iTCColumnID].iTCDrawerCylRetractRS_EAP.4	:= stTCMLevelVIO.ipTCDrawerCylRetractRS;
				6 :	
					stEAP.stTBOT_TC_EAP[iTCColumnID].iTCDrawerCylRetractRS_EAP.5	:= stTCMLevelVIO.ipTCDrawerCylRetractRS;
			END_CASE	
				
				//EAP FROM TBOT => TC
			CASE iLevel OF		
				1 :	
					varBool															:= stEAP.stTBOT_TC_EAP[iTCColumnID].iTCDwrSafeToMoveEAP.0;
				2 :	
					varBool															:= stEAP.stTBOT_TC_EAP[iTCColumnID].iTCDwrSafeToMoveEAP.1;
				3 :	
					varBool															:= stEAP.stTBOT_TC_EAP[iTCColumnID].iTCDwrSafeToMoveEAP.2;
				4 :	
					varBool															:= stEAP.stTBOT_TC_EAP[iTCColumnID].iTCDwrSafeToMoveEAP.3;
				5 :	
					varBool															:= stEAP.stTBOT_TC_EAP[iTCColumnID].iTCDwrSafeToMoveEAP.4;
				6 :	
					varBool															:= stEAP.stTBOT_TC_EAP[iTCColumnID].iTCDwrSafeToMoveEAP.5;
			END_CASE
	        
			stEAP.arrTBOT_TC_SubLevelEAP[iTCColumnID,iLevel].bTCDwrSafeToMoveEAP	:= varBool;
			
			//<Convert Int to Bool>
			//TBOT => TC
			//arrTCMultiLevel[i].stGblParam.iTCDwrSafeToMoveEAP := stEAP.arrTBOT_TC_SubLevelEAP[iTCColumnID,iLevel].iTCDwrSafeToMoveEAP;	//arrTCDwrSafeToMoveEAP[iLevel];
			arrTCMultiLevel[iLevel].stGblParam.bTCDwrSafeToMoveEAP 						:= stEAP.arrTBOT_TC_SubLevelEAP[iTCColumnID,iLevel].bTCDwrSafeToMoveEAP;	//stEAP.stTBOT_TC_EAP[iTCColumnID].iTCDwrSafeToMoveEAP;//.arrTCDwrSafeToMoveEAP[iLevel];	
			arrTCMultiLevel[iLevel].stGblParam.bTBotAntiCollisionTriggered				:= stEAP.stTBOT_TC_EAP[iTCColumnID].bAntiCollisionTriggered;	//stEAP_TC_TBOT.bAntiCollisionTriggered;
			arrTCMultiLevel[iLevel].stGblParam.bTCCellACPwrOff							:= stEAP.stTBOT_TC_EAP[iTCColumnID].bTCCellACPwrOff;	//stEAP_TC_TBOT.bAntiCollisionTriggered;
			arrTCMultiLevel[iLevel].fbTCMultiLevelSeq.P_stParam							:= arrTCMultiLevel[iLevel].stGblParam;	//set value
		END_FOR
	END_IF	
END_IF	

CmdAndEventProcess();
Logging();
TestManually();

////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
/////////////////////////////////////// For Troubleshooting Purpose ///////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
TestDIFU(clk := ALMTC.Level[1].AlarmID[4]);

IF TestDIFU.Q THEN 
	;//for troubleshooting
END_IF

// Jimmy Testing Purpose
fb_Testing();
]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="2605" Count="1" />
      <LineId Id="1991" Count="6" />
      <LineId Id="2608" Count="3" />
      <LineId Id="1990" Count="0" />
      <LineId Id="2226" Count="0" />
      <LineId Id="1842" Count="0" />
      <LineId Id="1500" Count="0" />
      <LineId Id="2612" Count="0" />
      <LineId Id="2170" Count="0" />
      <LineId Id="2173" Count="0" />
      <LineId Id="2986" Count="0" />
      <LineId Id="3149" Count="0" />
      <LineId Id="3152" Count="0" />
      <LineId Id="3151" Count="0" />
      <LineId Id="3380" Count="0" />
      <LineId Id="3383" Count="0" />
      <LineId Id="3462" Count="0" />
      <LineId Id="3460" Count="0" />
      <LineId Id="3382" Count="0" />
      <LineId Id="3459" Count="0" />
      <LineId Id="3458" Count="0" />
      <LineId Id="2681" Count="0" />
      <LineId Id="3146" Count="0" />
      <LineId Id="2114" Count="0" />
      <LineId Id="2683" Count="3" />
      <LineId Id="3535" Count="1" />
      <LineId Id="3538" Count="0" />
      <LineId Id="3548" Count="2" />
      <LineId Id="3539" Count="0" />
      <LineId Id="1689" Count="0" />
      <LineId Id="1691" Count="3" />
      <LineId Id="1696" Count="1" />
      <LineId Id="2615" Count="0" />
      <LineId Id="1698" Count="3" />
      <LineId Id="1703" Count="1" />
      <LineId Id="3155" Count="1" />
      <LineId Id="3154" Count="0" />
      <LineId Id="705" Count="0" />
      <LineId Id="1318" Count="0" />
      <LineId Id="1887" Count="0" />
      <LineId Id="1886" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="2051" Count="0" />
      <LineId Id="515" Count="0" />
      <LineId Id="3157" Count="0" />
      <LineId Id="132" Count="0" />
      <LineId Id="2059" Count="0" />
      <LineId Id="2745" Count="0" />
      <LineId Id="2060" Count="0" />
      <LineId Id="2740" Count="0" />
      <LineId Id="2746" Count="0" />
      <LineId Id="371" Count="0" />
      <LineId Id="2738" Count="1" />
      <LineId Id="369" Count="0" />
      <LineId Id="285" Count="0" />
      <LineId Id="122" Count="0" />
      <LineId Id="2747" Count="0" />
      <LineId Id="459" Count="0" />
      <LineId Id="462" Count="0" />
      <LineId Id="480" Count="0" />
      <LineId Id="2733" Count="0" />
      <LineId Id="479" Count="0" />
      <LineId Id="2735" Count="2" />
      <LineId Id="2734" Count="0" />
      <LineId Id="465" Count="0" />
      <LineId Id="461" Count="0" />
      <LineId Id="460" Count="0" />
      <LineId Id="1626" Count="0" />
      <LineId Id="1295" Count="0" />
      <LineId Id="2617" Count="0" />
      <LineId Id="1296" Count="1" />
      <LineId Id="1299" Count="0" />
      <LineId Id="2748" Count="1" />
      <LineId Id="3056" Count="0" />
      <LineId Id="3060" Count="0" />
      <LineId Id="3165" Count="0" />
      <LineId Id="2303" Count="0" />
      <LineId Id="2365" Count="0" />
      <LineId Id="2750" Count="0" />
      <LineId Id="2304" Count="1" />
      <LineId Id="2307" Count="0" />
      <LineId Id="2306" Count="0" />
      <LineId Id="2751" Count="0" />
      <LineId Id="2542" Count="2" />
      <LineId Id="2541" Count="0" />
      <LineId Id="3067" Count="0" />
      <LineId Id="3069" Count="2" />
      <LineId Id="3068" Count="0" />
      <LineId Id="3072" Count="0" />
      <LineId Id="3074" Count="2" />
      <LineId Id="3073" Count="0" />
      <LineId Id="1300" Count="0" />
      <LineId Id="1302" Count="0" />
      <LineId Id="2752" Count="0" />
      <LineId Id="1303" Count="11" />
      <LineId Id="425" Count="0" />
      <LineId Id="2302" Count="0" />
      <LineId Id="1844" Count="4" />
      <LineId Id="2753" Count="0" />
      <LineId Id="1849" Count="0" />
      <LineId Id="2754" Count="0" />
      <LineId Id="1850" Count="0" />
      <LineId Id="2755" Count="0" />
      <LineId Id="1851" Count="0" />
      <LineId Id="2756" Count="0" />
      <LineId Id="1852" Count="0" />
      <LineId Id="2757" Count="0" />
      <LineId Id="1853" Count="0" />
      <LineId Id="2758" Count="0" />
      <LineId Id="1854" Count="0" />
      <LineId Id="2759" Count="0" />
      <LineId Id="1855" Count="1" />
      <LineId Id="2760" Count="0" />
      <LineId Id="1857" Count="0" />
      <LineId Id="2761" Count="0" />
      <LineId Id="1858" Count="0" />
      <LineId Id="2765" Count="0" />
      <LineId Id="1859" Count="0" />
      <LineId Id="2764" Count="0" />
      <LineId Id="1860" Count="0" />
      <LineId Id="2763" Count="0" />
      <LineId Id="1861" Count="0" />
      <LineId Id="2762" Count="0" />
      <LineId Id="1862" Count="3" />
      <LineId Id="1867" Count="0" />
      <LineId Id="2766" Count="0" />
      <LineId Id="1868" Count="0" />
      <LineId Id="2771" Count="0" />
      <LineId Id="1869" Count="0" />
      <LineId Id="2770" Count="0" />
      <LineId Id="1870" Count="0" />
      <LineId Id="2769" Count="0" />
      <LineId Id="1871" Count="0" />
      <LineId Id="2768" Count="0" />
      <LineId Id="1872" Count="0" />
      <LineId Id="2767" Count="0" />
      <LineId Id="1873" Count="0" />
      <LineId Id="2772" Count="0" />
      <LineId Id="1874" Count="0" />
      <LineId Id="3166" Count="0" />
      <LineId Id="1875" Count="0" />
      <LineId Id="1877" Count="3" />
      <LineId Id="2423" Count="0" />
      <LineId Id="1881" Count="0" />
      <LineId Id="2" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="2622" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="80" Count="0" />
      <LineId Id="3159" Count="0" />
      <LineId Id="589" Count="0" />
      <LineId Id="3162" Count="0" />
      <LineId Id="3161" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="2621" Count="0" />
      <LineId Id="590" Count="0" />
      <LineId Id="629" Count="0" />
      <LineId Id="592" Count="0" />
      <LineId Id="2840" Count="0" />
      <LineId Id="2839" Count="0" />
      <LineId Id="2841" Count="0" />
      <LineId Id="24" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>